# UniversalAIAssistantBackend

./: .gitignore  pyproject.toml
app/: _test.py  config.py  main.py
app/database/: base.py  connector.py
app/database/models/: assistant.py  daily_stats.py  invite_code.py  thread.py  user.py
tests/: clean_db.py  test_config.py
tests/database/models/: test_daily_stats.py  test_user_and_invite_code.py
