[tool.poetry]
name = "universalaiassistantbackend"
version = "0.1.0"
description = ""
authors = ["GangFaDeShenMe <54745033+GangFaDeShenMe@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
loguru = "^0.7.2"
toml = "^0.10.2"
charset-normalizer = "^3.3.2"
sqlalchemy = "^2.0.29"
uuid = "^1.30"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
